--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Olena Soroka</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+      content="Front-end developer journey of Olena Soroka"
+    />
+    <title>Portfolio Olena Soroka</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -21,7 +25,7 @@
   <body class="pt-5">
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Olena Soroka</a>
+        <a class="navbar-brand" href="index.html" title="Home">Olena Soroka</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Olena Soroka"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Olena Soroka"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -54,8 +74,15 @@
     <h3 class="text-center">🇺🇦 Front-end developer, based in Europe</h3>
 
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Olena Soroka"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="About Olena Soroka"
+        >About me</a
+      >
     </div>
 
     <div class="container">
@@ -65,6 +92,7 @@
             data-cfsrc="images/yoga.png"
             class="img-fluid rounded"
             src="https://31ukq.codesandbox.io/images/yoga.png"
+            alt="women in a tree yoga pose"
           />
         </div>
         <div class="col-md-6">
@@ -76,7 +104,9 @@
             Quisquam, vel.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga app project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -90,7 +120,9 @@
             aut similique maxime excepturi consectetur!
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather app project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
@@ -98,6 +130,7 @@
             data-cfsrc="images/weather.png"
             class="img-fluid rounded"
             src="https://31ukq.codesandbox.io/images/weather.png"
+            alt="weather app dashboard"
           />
         </div>
       </div>
@@ -107,6 +140,7 @@
             data-cfsrc="images/yogurt.png"
             class="img-fluid rounded"
             src="https://31ukq.codesandbox.io/images/yogurt.png"
+            alt="yogurt in a glass"
           />
         </div>
         <div class="col-md-6">
@@ -118,7 +152,9 @@
             officiis? Molestias, labore?
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yogurt app project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
