--- a/about.html
+++ b/about.html
@@ -17,11 +17,15 @@
       crossorigin="anonymous"
     ></script>
     <title>About Olena Soroka</title>
+    <meta
+      name="description"
+      content="Front-end developer journey of Olena Soroka"
+    />
   </head>
   <body class="pt-5">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Olena Soroka</a>
+        <a class="navbar-brand" href="index.html" title="Home">Olena Soroka</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Home"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Olena Soroka"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Olena Soroka"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -66,6 +86,7 @@
             data-cfsrc="images/yoga.png"
             class="img-fluid p-2 shadow rounded"
             src="https://31ukq.codesandbox.io/images/yoga.png"
+            alt="women in a tree yoga pose"
           />
         </div>
         <div class="col-sm-4">
@@ -73,6 +94,7 @@
             data-cfsrc="images/weather.png"
             class="img-fluid p-2 shadow rounded"
             src="https://31ukq.codesandbox.io/images/weather.png"
+            alt="weather app dashboard"
           />
         </div>
         <div class="col-sm-4">
@@ -80,13 +102,16 @@
             data-cfsrc="images/yogurt.png"
             class="img-fluid p-2 shadow rounded"
             src="https://31ukq.codesandbox.io/images/yogurt.png"
+            alt="yogurt in a glass"
           />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[email]" class="email-link"> [Your email] </a>
+      <a href="mailto:[email]" class="email-link" title="Contact Olena Soroka">
+        [Your email]
+      </a>
     </div>
   </body>
 </html>
