--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
-      content="Front-end developer journey of Olena Soroka"
     />
     <title>Portfolio Olena Soroka</title>
+    <meta name="description" content="Front-end developer journey of Olena Soroka">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
